# state-space-searching

./: .gitignore  CMakeLists.txt  astar.hpp  bfs.hpp  common_functions.hpp  dfs.hpp  main.cpp  types.hpp  ucs.hpp
.cache/clangd/index/: main.cpp.3E06162CFDC86A76.idx
misc/: common_functions.hpp
searches/: astar.hpp  bfs.hpp  dfs.hpp  ucs.hpp
